corrigido links arquivos

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url("/louvorjk/css/global.css");
-@import url("/louvorjk/css/header.css");
-@import url("/louvorjk/css/intrudocao.css");
-@import url("/louvorjk/css/escala.css");
-@import url("/louvorjk/css/musica.css");
+@import url("./global.css");
+@import url("./header.css");
+@import url("./intrudocao.css");
+@import url("./escala.css");
+@import url("./musica.css");
