--- a/css/global.css
+++ b/css/global.css
@@ -7,6 +7,7 @@ body{
 
  a{
   text-decoration: none;
+  color: #000;
 }
 
 ul{
@@ -17,7 +18,7 @@ img{
   max-width: 150px;
 }
 
-h1, h2, h3, span{
+h1, h2, h3, span, p{
   margin: 0px;
 }
 
