--- a/css/intrudocao.css
+++ b/css/intrudocao.css
@@ -1,9 +1,11 @@
 .introducao{
   max-width: 1200px;
   text-align: center;
-  margin: 60px auto;
+  margin: 0px auto;
   padding: 20px 40px;
   /* background-color: #d4d4d4; */
+  text-align: center;
+  margin-top: 40px;
 }
 
 .introducao h1{
@@ -33,7 +35,6 @@
   }
   .introducao h1{
     font-size: 24px;
-    margin-bottom: 10px;
   }
   .introducao h2{
     font-size: 18px;
