--- a/css/organizacao.css
+++ b/css/organizacao.css
@@ -2,6 +2,22 @@
   max-width: 1200px;
   padding: 40px;
   margin: 0 auto;
+  position: relative;
+}
+
+.organizacao::before{
+  content: '';
+  display: block;
+  width: 500px;
+  height: 500px;
+  background: url("../svg/icons8-rules.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  right: 100px;
+  top: 450px;
+  opacity: 5%;
+  rotate: 45deg;
 }
 
 .organizacao-lista{
@@ -43,4 +59,21 @@
   .organizacao-lista h4{
     font-size: 18px;
   }
+
+  
+.organizacao::before{
+  content: '';
+  display: block;
+  width: 300px;
+  height: 300px;
+  background: url("../svg/icons8-rules.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  right: 50px;
+  background-size: contain;
+  top: 450px;
+  opacity: 4%;
+  rotate: 15deg;
+}
 }
