--- a/css/header.css
+++ b/css/header.css
@@ -17,6 +17,23 @@
 
 .header-menu a {
   color: #04200B;
+  padding: 16px 0px;
+  position: relative;
+}
+
+.header-menu a:after{
+  content: '';
+  display: block;
+  height: 2px;
+  width: 0%;
+  background-color: #6c9676;
+  transition: 0.2s;
+  margin-top: 4px;
+  position: absolute;
+}
+
+.header-menu a:hover:after{
+  width: 100%;
 }
 
 @media (max-width: 800px) {
@@ -38,4 +55,7 @@
     padding: 12px;
   }
 
+  .header-menu a:after{
+    display: none;
+  }
 }
