--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,4 @@
 @import url("./musica.css");
 @import url("./organizacao.css");
 @import url("./footer.css");
+@import url("./introducaoAviso.css");
