--- a/css/introducaoAviso.css
+++ b/css/introducaoAviso.css
@@ -27,3 +27,26 @@
   margin-right: auto;
   line-height: 33px;
 }
+
+
+@media (max-width: 800px){
+  .tituloAviso{
+    font-size: 40px;
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 600px){
+  
+  .introducaoAviso{
+    margin: 10px auto;
+  }
+  .tituloAviso{
+    font-size: 40px;
+  }
+  .paragrafoAviso{
+    font-size: 18px;
+  }
+}
+
+
