--- a/css/introducaoAviso.css
+++ b/css/introducaoAviso.css
@@ -32,20 +32,17 @@
 @media (max-width: 800px){
   .tituloAviso{
     font-size: 40px;
-    margin-bottom: 10px;
   }
 }
 
 @media (max-width: 600px){
-  
-  .introducaoAviso{
-    margin: 10px auto;
-  }
   .tituloAviso{
     font-size: 40px;
   }
   .paragrafoAviso{
     font-size: 18px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 }
 
