--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,6 @@
   max-width: 1200px;
   padding: 40px;
   align-items: center;
-  /* background-color: #E7F4EA; */
   margin: 0 auto;
 
 }
@@ -44,10 +43,13 @@
   }
 
   .header-menu a {
-    background-color: #D1E4D6;
+  background-image: linear-gradient(#D1E4D6, #aec7b5);
     padding: 10px 20px;
     border-radius: 4px;
     font-weight: 450;
+    box-shadow: inset 0px -1px 1px #D1E4D6;
+    font-size: 0.8rem;
+    text-transform: uppercase;
   }
   .header-menu {
     justify-content: center;
