--- a/css/intrudocao.css
+++ b/css/intrudocao.css
@@ -31,12 +31,14 @@
 @media (max-width: 600px){
   
   .introducao{
-    margin: 10px auto;
+    margin-top: 0px;
   }
   .introducao h1{
     font-size: 24px;
+    display: none;
   }
   .introducao h2{
-    font-size: 18px;
+    font-size: 24px;
+    order: 99;
   }
 }
