--- a/css/global.css
+++ b/css/global.css
@@ -34,3 +34,11 @@ h1, h2, h3,h4, span, p, ul, li{
 hr{
   background-color: #D1E4D6
 }
+
+.botaoAviso{
+  padding: 10px 40px;
+  background-color: #274D30;
+  border-style: none;
+  color: #fff;
+  border-radius: 5px;
+}
