--- a/css/header.css
+++ b/css/header.css
@@ -35,6 +35,8 @@
   width: 100%;
 }
 
+
+
 @media (max-width: 800px) {
   .header {
     flex-direction: column;
@@ -43,8 +45,9 @@
   }
 
   .header-menu a {
-  background-image: linear-gradient(#D1E4D6, #aec7b5);
-    padding: 10px 20px;
+  /* background-image: linear-gradient(#D1E4D6, #aec7b5); */
+    background-color: #ddd;
+  padding: 10px 20px;
     border-radius: 4px;
     font-weight: 450;
     box-shadow: inset 0px -1px 1px #D1E4D6;
@@ -60,4 +63,12 @@
   .header-menu a:after{
     display: none;
   }
+}
+
+
+@media (max-width: 600px){
+.header-menu a.active {
+  background-image: linear-gradient(#D1E4D6, #aec7b5);
+  /* Outros estilos que você desejar */
+}
 }
