--- a/css/fonte.css
+++ b/css/fonte.css
@@ -1,12 +1,60 @@
 @font-face {
-  font-family: 'Noto Serif';
-  src: url('../fonts/Noto_Serif/') format('truetype');
+  font-family: "Noto Serif Bold";
+  src: url('../fonts/Noto_Serif/static/NotoSerif-Bold.ttf') format('truetype');
 }
 @font-face {
-  font-family: 'Roboto';
-  src: url('../fonts/Roboto/') format('truetype');
+  font-family: "Noto Serif Light";
+src: url('../fonts/Noto_Serif/static/NotoSerif-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: "Noto Serif Medium";
+src: url('../fonts/Noto_Serif/static/NotoSerif-Medium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: "Noto Serif Regular";
+src: url('../fonts/Noto_Serif/static/NotoSerif-Regular.ttf') format('truetype');
+}
+
+
+@font-face {
+  font-family: "Poppins Medium";
+src: url('../fonts/Poppins/Poppins-Medium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: "Poppins Regular";
+src: url('../fonts/Poppins/Poppins-Regular.ttf') format('truetype');
+}
+
+
+@font-face {
+  font-family: "Poppins Light";
+src: url('../fonts/Poppins/Poppins-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: "Poppins Bold";
+src: url('../fonts/Poppins/Poppins-Bold.ttf') format('truetype');
+}
+
+
+@font-face {
+  font-family: "Roboto Medium";
+src: url('../fonts/Roboto/Roboto-Medium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: "Roboto Light";
+src: url('../fonts/Roboto/Roboto-Light.ttf') format('truetype');
 }
 @font-face {
-  font-family: 'Poppins';
-  src: url('../fonts/Poppins/') format('truetype');
+  font-family: "Roboto Regular";
+src: url('../fonts/Roboto/Roboto-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: "Roboto Bold";
+src: url('../fonts/Roboto/Roboto-Bold.ttf') format('truetype');
 }
