--- a/css/intrudocao.css
+++ b/css/intrudocao.css
@@ -11,10 +11,11 @@
 .introducao h1{
   font-size: 60px;
   margin-bottom: 20px;
+  font-family: "Noto Serif Regular";
 }
 
 .introducao h2{
-  font-family: "Noto Serif", serif;
+  font-family: "Noto Serif Regular", serif;
   font-size: 48px;
 }
 
