--- a/css/musica.css
+++ b/css/musica.css
@@ -38,8 +38,13 @@
   padding: 12px;
   gap: 8px;
   text-align: center;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins Bold", sans-serif;
 }
+
+.musica-lista .lista-titulo span{
+  font-family: "Roboto Regular";
+}
+
 
 .link-titulo{
   display: flex;
@@ -55,7 +60,7 @@
 .lista-titulo span,
 a {
   font-size: 16px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Regular", sans-serif;
 }
 
 .musica-link {
@@ -63,11 +68,15 @@ a {
   gap: 20px;
 }
 
+.musica-lista .link-titulo{
+  font-family: "Roboto Light";
+}
+
 .musica-link a{
   text-transform: uppercase;
   background-image: linear-gradient(#bccfb4, #91b89a);
 font-size: 14px;
-font-weight: 500;
+font-family: "Roboto Regular";
 }
 
 @media (max-width:800px) {
