--- a/css/escala.css
+++ b/css/escala.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 120px;
+  margin-top: 60px;
 }
 
 .data {
@@ -21,7 +21,8 @@
   gap: 8px;
   justify-content: center;
   margin-top: 60px;
-  padding: 12px;
+  padding-left: 0px;
+  font-weight: 600;
 }
 
 /* .escala-lista{
@@ -42,14 +43,12 @@
   text-align: center;
   flex-grow: 1;
   flex-basis: 80px;
-  font-family: "Poppins Medium", sans-serif;
 }
 
 .escala-lista p {
   font-size: 18px;
   font-weight: 300;
   padding: 8px;
-  font-family: "Roboto Regular", sans-serif;
 }
 
 @media (max-width: 800px) {
