--- a/css/intrudocao.css
+++ b/css/intrudocao.css
@@ -15,7 +15,7 @@
 }
 
 .introducao h2{
-  font-family: "Noto Serif Regular", serif;
+    font-family: "Noto Serif Regular";
   font-size: 48px;
 }
 
