--- a/css/sugestao.css
+++ b/css/sugestao.css
@@ -1,10 +1,138 @@
 .sugestao{
-  
-  max-width: 1200px;
-text-align: center;
+max-width: 1200px;
 margin: 0px auto;
-padding: 20px 40px;
-text-align: center;
+padding: 40px;
 margin-top: 40px;
+}
+
+.sugestaoTitulo{
+  text-align: left;
+}
+
+.sugestaoTexto{
+  font-size: 20px;
+  max-width: fit-content;
+  margin-top: 20px;
+  line-height: 28px;
+  background-color: #D1E4D6;
+  padding: 12px;
+  border-radius: 5px;
+  margin-top: 60px;
+}
+
+
+.sugestaoInput{
+  margin-top: 20px;;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 600px;
+}
+
+.sugestaoInput label{
+  font-size: 16px;
+}
+
+.textInput{
+  font-size: 16px;
+  padding: 8px;
+  border-radius: 5px;
+}
+
+
+.sugestaoBotao{
+  border-style: none;
+  cursor: pointer;
+  background-color: #45a049;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  color: #fff;
+  border-radius: 5px;
+  margin-top: 8px;
+  font-weight: 600;
+}
+
+.sugestaoDeletar{
+  border-style: none;
+  background-color: #c0bebe;
+  color: #000;
+  padding: 8px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+.sugestaoLista{
+  max-width: 600px;
+  margin-top: 20px;
+  padding: 20px;
+  border-radius: 5px;
+  /* background-color: #D1E4D6; */
+  background-color: #daf0e0;
+}
+
+.sugestaoLista h3{
+  text-align: center;
+}
+
+
+.sugestaoLista ul{
+  display: flex;
+  flex-direction: column;
+  padding-left: 0px;
+  margin-top: 32px;
+}
+
+.itemLista{
+  display: flex;
+  justify-content: space-between;
+  max-width: 600px;
+  padding: 12px;
+  border-radius: 4px;
+  align-items: center;
+  font-weight: 500;
+}
+
+.sugestaoLista ul li:nth-child(even){
+  background-color: #45a049ad;
+}
+
+/* .sugestaoLista ul li:nth-child(odd){
+  background-color: #45a049;
+} */
+
+.sugestaoBotao:hover{
+  background-color: #45a049ad;
+}
+
+.textInput::focus{
+  border-color: #45a049;
+}
+
+
+@media (max-width: 800px){
+
+.sugestaoTitulo{
+  text-align: center;
+}
+}
+
+@media (max-width: 600px){
+  .sugestao{
+    padding: 20px;
+  }
+
+  .sugestaoTexto{
+    margin-top: 20px;
+    font-size: 16px;
+  }
+
+  .divBotao{
+    display: flex;
+    max-width: 600px;
+    justify-content: CENTER;
+  }
+  
 
 }
