--- a/css/header.css
+++ b/css/header.css
@@ -1,26 +1,38 @@
+.header-bg{
+  background-color: #0d5131;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   max-width: 1200px;
-  padding: 40px;
+  padding: 20px;
   align-items: center;
-  margin: 0 auto;
+  margin: 0 auto;;
+}
+/* fundo branco da imagem */
+.header-imagem{
+  background-color: #eef7ee;
+  padding: 20px;
+  border-bottom-left-radius: 40px;
+  border-top-right-radius: 40px;
 }
 
 .header-menu {
   display: flex;
   gap: 60px;
-  flex-wrap: wrap;
-  }
+  flex-wrap: wrap;  
+}
 
 .header-menu a {
-  color: #04200B;
+  /* color: #04200B; */
+  color: #fff;
   /* PADDING 16 CIMA E BAIXO PARA FICAR MAIS FACIL O CURSOR DO MOUSE ENCONTRAR NA VERSÃO DESKTOP */
   padding: 16px 0px;
   position: relative;
   font-family: "Roboto Medium", sans-serif;
 }
-
+/* animação ao passar o mouse em cima do link na versão desktop */
 .header-menu a:after{
   content: '';
   display: block;
@@ -31,28 +43,29 @@
   margin-top: 4px;
   position: absolute;
 }
-
+/* ativar a animação */
 .header-menu a:hover:after{
   width: 100%;
 }
 
-
-
 @media (max-width: 800px) {
+  .header-bg{
+    padding: 20px 0px;
+  }
+  
   .header {
     flex-direction: column;
     gap: 20px;
     padding: 0px;
-    margin: 40px 0 0 0;
   }
 
   .header-menu a {
-    background-color: #ddd;
+    background-image: linear-gradient(#fff, #abc4b1);
    padding: 10px 20px;
     border-radius: 4px;
-    box-shadow: inset 0px -1px 1px #D1E4D6;
     font-size: 0.8rem;
     text-transform: uppercase;
+    color: #0d5131;
   }
 
   .header-menu {
@@ -67,7 +80,8 @@
   }
 
   .header-menu a.active {
-    background-image: linear-gradient(#D1E4D6, #aec7b5);  
+    background-image: linear-gradient(#9ABDA3, #4C7956); 
+    color: #fff; 
 
     /* Outros estilos que você desejar quando o botao da nav estiver ativo*/
   }
@@ -83,7 +97,6 @@
    padding: 8px 16px;
     border-radius: 4px;
     font-weight: 450;
-    box-shadow: inset 0px -1px 1px #D1E4D6;
     font-size: 0.8rem;
     text-transform: uppercase;
   }
