--- a/css/sugestao.css
+++ b/css/sugestao.css
@@ -40,9 +40,9 @@ margin-top: 40px;
 
 .textInput{
   font-size: 16px;
-  padding: 8px;
-  border-radius: 5px;
-  border-style: solid;
+  padding: 12px;
+  border-radius: 12px;
+  border-style: none;
   background-color: #D1E4D6;
   margin-top: 20px;
   max-width: 600px;
@@ -63,7 +63,7 @@ margin-top: 40px;
 
 .sugestaoDeletar{
   border-style: none;
-  background-color: #9e9e9e;
+  background-color: #bbbbbb;
   color: #000;
   padding: 8px 12px;
   border-radius: 5px;
@@ -110,7 +110,7 @@ margin-top: 40px;
 }
 
 .sugestaoLista ul li:nth-child(odd){
-  background-color: #95b99f;
+  background-color: #eef7ee;
 }
 
 /* .sugestaoLista ul li:nth-child(odd){
