finalizado login e controle escala

--- a/css/style.css
+++ b/css/style.css
@@ -7,5 +7,7 @@
 @import url("./footer.css");
 @import url("./fonte.css");
 @import url("./sugestao.css");
+@import url("./login.css");
+@import url("./admin.css");
 
 
