--- a/css/login.css
+++ b/css/login.css
@@ -1,22 +1,28 @@
-.login-bg{
+.loginBg{
   max-width: 1200px;
   margin: 0 auto;
-}
+  background-color: #568f74;
+ border-radius: 12px;
+  }
 
 .login{
+  margin-top: 60px;
+  padding: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+
 .loginForm{
   display: flex;
   flex-direction: column;
-  padding: 80px; 
+  padding: 40px; 
     background-image: linear-gradient(#8aceae, #568f74);
   border-radius: 5px;
   gap: 12px;
+  margin-top: 40px;
 }
 
 .loginForm label{
@@ -24,6 +30,24 @@
 }
 
 .loginForm input{
+  background-color: #d3fae8;
   margin-top: 4px;
+  padding: 8px;
+  border-radius: 4px;
+  border-style: none;
+}
+
+.botaoLogin{
+  padding: 10px 40px;
+  background-color: #274D30;
+  border-style: none;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.botaoLogin:hover{
+  background-color: #4e815a;
 }
 
