--- a/css/login.css
+++ b/css/login.css
@@ -24,6 +24,7 @@
   padding-bottom: 40px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
+  font-size: 1.3rem;
 }
 
 .form{
@@ -43,6 +44,7 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #5a5a5a;
   margin-left: 8px;
+  font-size: 1rem;
   font-weight: 600;
 }
 
@@ -68,6 +70,7 @@ box-shadow: 0 0 2px 5px #27b91a3a;
 }
 
 button{
+  font-size: 0.8rem;
   border: none;
   padding: 12px 32px;
   border-radius: 20px;
@@ -94,6 +97,7 @@ button:hover{
 .buttonDiv a{
     color: #8a8a8a;
     padding: 8px;
+    font-size: 1rem;
 }
 
 .buttonDiv a:hover{
@@ -111,17 +115,24 @@ button:hover{
 .contentTitle{
   padding: 80px 40px;
   text-align: center;
+  font-size: 1.1rem;
+}
+
+.contentDescription{ 
+  padding: 0 40px 0 40px;
+
 }
 
 .contentDescription p{
-  padding: 0 40px 0 40px;
   line-height: 1.6;
+  font-size: 1rem;
   width: 45ch;
   color: #a9a6b4d2 ;
 }
 .contentDescription a{
   color: #a9a6b4d2 ;
   text-decoration: none;
+  width: 45ch;
 }
   .contentDescription a:hover{
   color: #ffffff ;
@@ -141,9 +152,61 @@ button:hover{
   border-radius: 20px;
   background-color: #27b91a;
   color: #ffffff;
+  font-size: 1rem;
 }
 
 .contentMap a:hover{
   background-color: #68c260;
 }
 
+
+@media (max-width: 900px){
+  .container{
+    grid-template-columns: 1fr;
+    padding: 0;
+  }
+
+  .loginContent{
+    box-shadow: inherit;
+    grid-row: 1;
+  }
+  .contentTitle{
+    padding: 40px 40px 20px 40px;
+  }
+
+  .contentDescription a{
+    background-color: #6b6786d2;
+    padding: 12px;
+    border-radius: 4px;
+    color: #cdcdcd;
+  }
+  
+  .contentDescription p{
+    padding: 12px;
+  }
+
+  .contentFooter{
+    margin-bottom: 40px;
+  }
+
+  .loginTitle{
+    font-size: 1rem;
+    padding: 40px 40px 20px 40px;
+  }
+
+  .buttonDiv{
+    padding: 40px;
+  }
+}
+
+@media (max-width: 600px){
+  .contentTitle{
+    font-size: 1rem;
+    padding: 20px;
+  }
+  .contentDescription{
+    font-size: 14px;
+  }
+
+
+}
