--- a/css/login.css
+++ b/css/login.css
@@ -119,8 +119,8 @@ button:hover{
 }
 
 .contentDescription{ 
-  padding: 0 40px 0 40px;
-
+  padding: 0px 40px 0 40px;
+  margin-top: 40px;
 }
 
 .contentDescription p{
@@ -145,7 +145,7 @@ button:hover{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 40px;
+  padding: 40px 0 80px 0;
   gap: 10px;
 }
 
@@ -186,7 +186,7 @@ button:hover{
   }
 
   .contentFooter{
-    margin-bottom: 40px;
+    padding-bottom: 40px;
   }
 
   .loginTitle{
@@ -207,9 +207,6 @@ button:hover{
   .contentDescription a, .contentDescription p{
     width: auto;
     text-align: center;
-  }
-  .buttonDiv{
-    padding: 20px;
   }
 }
 
