--- a/css/musica.css
+++ b/css/musica.css
@@ -23,7 +23,7 @@
 .musica-lista li {
   display: flex;
   flex-grow: 1;
-  background-color: #D1E4D6;
+  background-color: var(--cor01);
   padding: 12px;
   border-radius: 4px;
   gap: 20px;
@@ -68,11 +68,12 @@ a {
 
 .musica-link a{
   text-transform: uppercase;
-  background-image: linear-gradient(#F5FFF8, #c1d8c8);
+  /* background-image: linear-gradient(#F5FFF8, #c1d8c8); */
+  background-image: var(--gradienteBotao);
   font-size: 14px;
   padding: 10px;
   border-radius: 4px;
-  color: #000;
+  color: var(--corDark);
   box-shadow: inset 0px -1px 2px rgb(0, 0, 0, 0.2);
 }
 
@@ -122,7 +123,7 @@ a {
 
 .musica-link a:hover {
   background-image: linear-gradient(#93d1a1, #45a049);
-  color: #fff;
+  color: var(--corFundo);
   
 }
 
