--- a/css/sugestao.css
+++ b/css/sugestao.css
@@ -8,7 +8,7 @@ flex-direction: column;
 
 .sugestaoTitulo{
   text-align: left;
-margin-top: 40px;
+  margin-top: 40px;
 }
 
 .sugestaoTexto{
@@ -16,7 +16,7 @@ margin-top: 40px;
   max-width: fit-content;
   margin-top: 20px;
   line-height: 28px;
-  background-color: #D1E4D6;
+  background-color: var(--cor01);
   padding: 12px;
   border-radius: 5px;
   margin-top: 60px;
@@ -32,7 +32,7 @@ margin-top: 40px;
 
 .sugestaoInput label{
   font-size: 16px;
-  background-color: #D1E4D6;
+  background-color: var(--cor01);
   padding: 12px;
   border-radius: 5px;
   max-width: fit-content;
@@ -43,16 +43,20 @@ margin-top: 40px;
   padding: 12px;
   border-radius: 12px;
   border-style: none;
-  background-color: #D1E4D6;
+  background-color: var(--cor01);
   margin-top: 20px;
   max-width: 600px;
 }
+.textInput::placeholder{
+  color: var(--corTexto);
+}
+
 
 
 .sugestaoBotao{
   border-style: none;
   cursor: pointer;
-  background-color: #0d5131;
+  background-color: var(--corBotao01);
   padding: 10px 20px;
   text-transform: uppercase;
   color: #fff;
@@ -63,8 +67,8 @@ margin-top: 40px;
 
 .sugestaoDeletar{
   border-style: none;
-  background-color: #bbbbbb;
-  color: #000;
+  background-color: var(--corBotao02);
+  color: var(--corDark);
   padding: 8px 12px;
   border-radius: 5px;
   cursor: pointer;
@@ -82,7 +86,7 @@ margin-top: 40px;
   margin-top: 32px;
   padding: 20px;
   border-radius: 5px;
-  background-color: #D1E4D6;
+  background-color: var(--cor01);
 }
 
 .sugestaoLista h3{
@@ -110,7 +114,7 @@ margin-top: 40px;
 }
 
 .sugestaoLista ul li:nth-child(odd){
-  background-color: #eef7ee;
+  background-color: var(--cor02);
 }
 
 /* .sugestaoLista ul li:nth-child(odd){
