--- a/css/global.css
+++ b/css/global.css
@@ -9,7 +9,7 @@
   --gradienteBotao: linear-gradient(#fff, #abc4b1);
 }
 
-@media (prefers-color-scheme: light){
+@media (prefers-color-scheme: dark){
   :root{
   --corPrimaria: #0d5131;
   --corFundo: #000000;
